[package]
name = "cmc-rust"
version = "0.1.0"
authors = ["Micah Switzer <micah.switzer.dev@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { git = "https://github.com/clap-rs/clap/" } 
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }
plex = "0.2.5"
